// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`General CLI Reporting Should generate a valid report) 1`] = `"Argument provided: https://github.com"`;

exports[`General CLI helpers Terminal format helpers (colors): printError 1`] = `
Array [
  "This is an error msg",
]
`;

exports[`General CLI helpers Terminal format helpers (colors): printInfo 1`] = `
Array [
  "This is an information msg",
]
`;

exports[`General CLI helpers Terminal format helpers (colors): printSuccess 1`] = `
Array [
  "This is a success msg",
]
`;
